# Smithic

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MISSION.md  README.md  pyproject.toml  smithic.toml
.github/workflows/: ci.yml
docs/plans/: README.md  post-v0.3-backlog.md  v0.2-autonomous-ideation.md  v0.3-swarm.md
examples/: sample-mission.md  sample-target.smithic.toml
examples/missions/: cli.md  devtool.md  saas.md
src/smithic/: __init__.py  __main__.py  auth.py  cli.py  config.py  orchestrator.py  parent.py
src/smithic/budget/: exceptions.py  meter.py
src/smithic/mcp/: registry.py
src/smithic/memory/: cache.py  db.py
src/smithic/prompts/: implement.md
src/smithic/rubric/: default.yaml  loader.py  pr_gate.py  schema.py
src/smithic/stages/: critique.py  implement.py  introspect.py  pr.py  research.py  score.py  spec.py
src/smithic/telemetry/: logger.py
src/smithic/types/: __init__.py  critique.py  research.py
src/smithic/worktree/: manager.py  naming.py
tests/: _fakes.py  test_auth.py  test_cache.py  test_config.py  test_critique.py  test_critique_revise_loop.py  test_db_concurrent.py  test_diversity.py  test_hn_server.py  test_implement.py  test_introspect.py  test_mcp_registry.py  test_memory.py  test_meter_unmetered.py  test_meter_v02.py  test_naming.py  test_parent.py  test_ph_server.py  test_pr_gate.py  test_pr_gate_orchestrator.py  test_pr_sanitizer.py  test_research.py  test_research_cache_integration.py  test_rubric_loader.py  test_score.py  test_spec.py  test_worktree_concurrent.py
tests/fixtures/mock_repo/: CLAUDE.md  README.md  (+3 more)
(+3 files in other folders)
